--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ AtmosphericProfilesLibrary = "0.1"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.9"
+CloudMicrophysics = "0.9, 0.10"
 Colors = "0.12"
 Dierckx = "0.5"
 DiffEqCallbacks = "2"
@@ -51,8 +51,8 @@ JLD2 = "0.4"
 LambertW = "0.4"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
-RootSolvers = "0.2, 0.3"
 RRTMGP = "0.6"
+RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.5"
