--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -199,7 +199,7 @@ steps:
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist with EDMF"
         command:
-          - julia --color=yes --project=examples examples/hybrid/driver.jl --anelastic_dycore false --job_id sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf --vert_diff true --surface_scheme bulk --moist dry --dt 1secs --t_end 20secs --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Soares --config sphere --z_stretch false --post_process  false --apply_limiter false --dt_save_to_sol 10secs --dt_save_to_disk 10secs
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf --vert_diff true --surface_scheme bulk --moist dry --dt 1secs --t_end 20secs --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Soares --config sphere --z_stretch false --post_process  false --apply_limiter false --dt_save_to_sol 10secs --dt_save_to_disk 10secs
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf --out_dir sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf/*"
         agents:
@@ -571,38 +571,6 @@ steps:
           --job_id compressible_edmf_trmm
           --dt 0.1secs
         artifact_paths: "compressible_edmf_trmm/*"
-        agents:
-          slurm_mem: 20GB
-
-      - label: ":balloon: SCM EDMF TRMM_LBA (Anelastic, 1-moment micro)"
-        command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config column --turbconv edmf --debugging_tc true --regression_test true
-          --FLOAT_TYPE Float64 --hyperdiff false --apply_limiter false
-          --turbconv_case TRMM_LBA --rad TRMM_LBA
-          --z_elem 82 --z_stretch false --z_max 16400
-          --t_end 6hours --dt_save_to_sol 5mins --dt_save_to_disk 5mins
-          --moist equil --precip_model 1M
-          --anelastic_dycore true --split_ode false --ode_algo ODE.Euler
-          --job_id edmf_trmm
-          --dt 1secs
-        artifact_paths: "edmf_trmm/*"
-        agents:
-          slurm_mem: 20GB
-
-      - label: ":balloon: SCM EDMF TRMM_LBA (Anelastic, 0-moment micro)"
-        command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config column --turbconv edmf --debugging_tc true --regression_test true
-          --FLOAT_TYPE Float64 --hyperdiff false --apply_limiter false
-          --turbconv_case TRMM_LBA --rad TRMM_LBA
-          --z_elem 82 --z_stretch false --z_max 16400
-          --t_end 6hours --dt_save_to_sol 5mins --dt_save_to_disk 5mins
-          --moist equil --precip_model 0M
-          --anelastic_dycore true --split_ode false --ode_algo ODE.Euler
-          --job_id edmf_trmm_0_moment
-          --dt 1secs
-        artifact_paths: "edmf_trmm_0_moment/*"
         agents:
           slurm_mem: 20GB
 
