--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LambertW = "984bce1d-4616-540c-a9ee-88d1112d94c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -49,10 +50,11 @@ Insolation = "0.3"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
+NCDatasets = "0.11, 0.12"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
-RootSolvers = "0.2, 0.3"
 RRTMGP = "0.7"
+RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.5"
