--- a/.buildkite/toml/bomex.toml
+++ b/.buildkite/toml/bomex.toml
@@ -43,6 +43,11 @@ value = "Bomex"
 type = "string"
 alias = "ls_adv"
 
+[surface_setup]
+value = "Bomex"
+type = "string"
+alias = "surface_setup"
+
 [z_elem]
 value = 60
 type = "integer"
